mdapi/Custom/objects/Owner_Entity_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Created for D-00013323. Custom Setting to hold the Owner Entity value for Properties.</description>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Entity__c</fullName>
        <label>Owner Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Owner Entity Configuration</label>
</CustomObject>